Bug fix: container cannot find private and public keys